docs/envoy/v1.11.0/_sources/api-v2/config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto:

Dubbo Proxy
===========

Dubbo Proxy :ref:`configuration overview <config_network_filters_dubbo_proxy>`.

.. _envoy_api_msg_config.filter.network.dubbo_proxy.v2alpha1.DubboProxy:

config.filter.network.dubbo_proxy.v2alpha1.DubboProxy
-----------------------------------------------------

`[config.filter.network.dubbo_proxy.v2alpha1.DubboProxy proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto#L20>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "protocol_type": "...",
    "serialization_type": "...",
    "route_config": [],
    "dubbo_filters": []
  }

.. _envoy_api_field_config.filter.network.dubbo_proxy.v2alpha1.DubboProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting statistics.
  
  
.. _envoy_api_field_config.filter.network.dubbo_proxy.v2alpha1.DubboProxy.protocol_type:

protocol_type
  (:ref:`config.filter.network.dubbo_proxy.v2alpha1.ProtocolType <envoy_api_enum_config.filter.network.dubbo_proxy.v2alpha1.ProtocolType>`) Configure the protocol used.
  
  
.. _envoy_api_field_config.filter.network.dubbo_proxy.v2alpha1.DubboProxy.serialization_type:

serialization_type
  (:ref:`config.filter.network.dubbo_proxy.v2alpha1.SerializationType <envoy_api_enum_config.filter.network.dubbo_proxy.v2alpha1.SerializationType>`) Configure the serialization protocol used.
  
  
.. _envoy_api_field_config.filter.network.dubbo_proxy.v2alpha1.DubboProxy.route_config:

route_config
  (:ref:`config.filter.network.dubbo_proxy.v2alpha1.RouteConfiguration <envoy_api_msg_config.filter.network.dubbo_proxy.v2alpha1.RouteConfiguration>`) The route table for the connection manager is static and is specified in this property.
  
  
.. _envoy_api_field_config.filter.network.dubbo_proxy.v2alpha1.DubboProxy.dubbo_filters:

dubbo_filters
  (:ref:`config.filter.network.dubbo_proxy.v2alpha1.DubboFilter <envoy_api_msg_config.filter.network.dubbo_proxy.v2alpha1.DubboFilter>`) A list of individual Dubbo filters that make up the filter chain for requests made to the
  Dubbo proxy. Order matters as the filters are processed sequentially. For backwards
  compatibility, if no dubbo_filters are specified, a default Dubbo router filter
  (`envoy.filters.dubbo.router`) is used.
  
  


.. _envoy_api_msg_config.filter.network.dubbo_proxy.v2alpha1.DubboFilter:

config.filter.network.dubbo_proxy.v2alpha1.DubboFilter
------------------------------------------------------

`[config.filter.network.dubbo_proxy.v2alpha1.DubboFilter proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto#L52>`_

DubboFilter configures a Dubbo filter.

.. code-block:: json

  {
    "name": "...",
    "config": "{...}"
  }

.. _envoy_api_field_config.filter.network.dubbo_proxy.v2alpha1.DubboFilter.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the filter to instantiate. The name must match a supported
  filter.
  
  
.. _envoy_api_field_config.filter.network.dubbo_proxy.v2alpha1.DubboFilter.config:

config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) Filter specific configuration which depends on the filter being
  instantiated. See the supported filters for further documentation.
  
  

.. _envoy_api_enum_config.filter.network.dubbo_proxy.v2alpha1.ProtocolType:

Enum config.filter.network.dubbo_proxy.v2alpha1.ProtocolType
------------------------------------------------------------

`[config.filter.network.dubbo_proxy.v2alpha1.ProtocolType proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto#L41>`_

Dubbo Protocol types supported by Envoy.

.. _envoy_api_enum_value_config.filter.network.dubbo_proxy.v2alpha1.ProtocolType.Dubbo:

Dubbo
  *(DEFAULT)* ⁣
  

.. _envoy_api_enum_config.filter.network.dubbo_proxy.v2alpha1.SerializationType:

Enum config.filter.network.dubbo_proxy.v2alpha1.SerializationType
-----------------------------------------------------------------

`[config.filter.network.dubbo_proxy.v2alpha1.SerializationType proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto#L46>`_

Dubbo Serialization types supported by Envoy.

.. _envoy_api_enum_value_config.filter.network.dubbo_proxy.v2alpha1.SerializationType.Hessian2:

Hessian2
  *(DEFAULT)* ⁣
  
